# service/src/main/java/br/com/sw2you/realmeet/validator/RoomValidator.java
@@ -2,9 +2,12 @@ package br.com.sw2you.realmeet.validator;
 
 import static br.com.sw2you.realmeet.validator.ValidatorConstants.*;
 import static br.com.sw2you.realmeet.validator.ValidatorUtils.*;
+import static java.util.Objects.isNull;
 
 import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
+import br.com.sw2you.realmeet.api.model.UpdateRoomDTO;
 import br.com.sw2you.realmeet.domain.entity.repository.RoomRepository;
+import java.util.Objects;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -21,7 +24,19 @@ public class RoomValidator {
         if (
             validateName(createRoomDTO.getName(), validationErrors) &&
             validateSeats(createRoomDTO.getSeats(), validationErrors)
-        ) validateNameDuplicated(createRoomDTO.getName(), validationErrors);
+        ) validateNameDuplicated(null, createRoomDTO.getName(), validationErrors);
+
+        thrownOnError(validationErrors);
+    }
+
+    public void validate(Long roomId, UpdateRoomDTO updateRoomDto) {
+        var validationErrors = new ValidationErrors();
+
+        if (
+            validateRequired(roomId, ROOM_ID, validationErrors) &&
+            validateName(updateRoomDto.getName(), validationErrors) &&
+            validateSeats(updateRoomDto.getSeats(), validationErrors)
+        ) validateNameDuplicated(roomId, updateRoomDto.getName(), validationErrors);
 
         thrownOnError(validationErrors);
     }
@@ -41,9 +56,15 @@ public class RoomValidator {
         );
     }
 
-    private void validateNameDuplicated(String name, ValidationErrors validationErrors) {
+    private void validateNameDuplicated(Long roomIdToExclude, String name, ValidationErrors validationErrors) {
         roomRepository
             .findByNameAndActive(name, true)
-            .ifPresent(__ -> validationErrors.add(ROOM_NAME, ROOM_NAME + EXISTS_IN_DB));
+            .ifPresent(
+                room -> {
+                    if (!isNull(roomIdToExclude) && !Objects.equals(room.getId(), roomIdToExclude)) {
+                        validationErrors.add(ROOM_NAME, ROOM_NAME + EXISTS_IN_DB);
+                    }
+                }
+            );
     }
 }
