# service/src/main/resources/api.yml
@@ -46,6 +46,37 @@ paths:
           description: 'Deletado'
         404:
           description: 'Not found'
+    put:
+      summary: 'Atualiza uma room'
+      operationId: updateRoom
+      tags:
+        - room
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Id da room
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateRoomDTO'
+        required: true
+      responses:
+        204:
+          description: 'Update success'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RoomDTO'
+        404:
+          description: 'Not found'
+        422:
+          description: Unprocessable entity
+          $ref: '#/components/responses/UnprocessableEntity'
   /rooms:
     post:
       summary: 'Cria uma room'
@@ -58,7 +89,6 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateRoomDTO'
         required: true
-
       responses:
         201:
           description: Created
@@ -71,7 +101,7 @@ paths:
           $ref: '#/components/responses/UnprocessableEntity'
 components:
   schemas:
-    CreateRoomDTO:
+    UpdateRoomDTO:
       type: object
       properties:
         name:
@@ -79,6 +109,10 @@ components:
         seats:
           type: integer
           minimum: 0
+    CreateRoomDTO:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/UpdateRoomDTO'
     RoomDTO:
       type: object
       allOf:
